[package]
name = "super-octo-engine"
version = "0.1.0"
authors = ["Adam Szwarc <ext-lux-as1@ad.datcon.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
thiserror = "1"
